--- a/templates/base.html
+++ b/templates/base.html
@@ -5,26 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href={{url_for('static', filename='/css/styles.css')}}>
+  <link rel="stylesheet" href={{url_for('static', filename='css/styles.css')}}>
   <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed_top">
-    <div class="container-fluid">
+  <nav class="navbar navbar-dark bg-dark sticky-top">
+    <div class="container-fluid justify-content-center">
       <a class="navbar-brand" href="#">Keeb View</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">New</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Hot</a>
-          </li>
-        </ul>
-      </div>
     </div>
   </nav>
   {% block content%}
