--- a/templates/index.html
+++ b/templates/index.html
@@ -11,32 +11,31 @@
           <p> <b>{{submission["author"]}}</b> </p>
         </div>
         {% if submission["img"] is iterable and submission["img"] is not string: %}
-        <div class="carousel slide" id="gallery" data-bs-ride="carousel" data-bs-interval="false">
+        <div class="carousel slide" id="gallery" data-bs-ride="carousel">
           <div class="carousel-inner">
             {% for img in submission["img"]: %}
+            {% if loop.first %}
             <div class="carousel-item active">
-              <img src={{ img }} class="d-block w-100 img-fluid" />
+              <img src={{ img }} class="d-block w-100" />
             </div>
+            {% else %}
+            <div class="carousel-item">
+              <img src={{ img }} class="d-block w-100" />
+            </div>
+            {% endif %}
             {% endfor %}
-            <button class="carousel-control-prev" type="button" data-bs-target="#gallery" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#gallery" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </div>
         {% else %}
-        <img class=" d-block w-100 img-fluid" src={{ submission["img"] }} alt="">
+        <img class=" d-block w-100" src={{ submission["img"] }} alt="">
         {% endif %}
-        <div class="submission_icons d-flex d-row">
+        <!-- For future features -->
+        <!-- <div class="submission_icons d-flex d-row">
           <img src="/static/icons/heart-3510.svg"></img>
           <img src="/static/icons/message-4652.svg"></img>
           <img src="/static/icons/send-4007.svg"></img>
           <img src="/static/icons/bookmark-ribbon-7785.svg"></img>
-        </div>
+        </div> -->
         <div class="submission_footer mt-4 mx-2">
           <p> <b>{{submission["likes"]}} likes</b></p>
           <p> <b>{{submission["author"]}}</b> {{submission["title"]}}
